fix: fixed nav menu distortiong on click

--- a/src/assets/styles/scss/products.scss
+++ b/src/assets/styles/scss/products.scss
@@ -47,6 +47,7 @@
       }
 
       .category-link {
+        position: relative;
         margin-right: 1.2rem;
         display: flex;
         flex-direction: column;
@@ -63,6 +64,10 @@
           }
         }
         .underline {
+          position: absolute;
+          width: 100%;
+          bottom: 0;
+          left: 0;
           border-bottom: solid 1px #000000;
         }
       }
